<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_address">Address (Optional)</string>
    <string name="prompt_phoneNumber">Phone Number</string>
    <string name="enter_registration_details">Enter Registration Details</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_register">Register</string>
    <string name="action_new_user">New User? Click Here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_cred_pref">User Cred Pref</string>
    <string name="improper_credentials">Please enter proper credentials</string>
    <string name="missing_fields">Please fill out missing fields</string>
    <string name="incorrect_phone_number">Incorrect Phone Number</string>
    <string name="improper_password">Please Enter proper password</string>
    <string name="logout">Logout</string>
    <string name="register_vendor">Register Vendor</string>
    <string name="register_customer">Register Customer</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="vendor_phone">Vendor Number</string>
    <string name="customer_phone">Customer Number</string>
    <string name="customer_name">Customer Name</string>
    <string name="vendor_item">Item Supplied</string>
    <string name="send_request">Send Request</string>
    <string name="vendors_list">Vendors List</string>
    <string name="item_supplied">Item Supplied</string>


    <!-- Customer -->`
    <string name="customer_text">CUSTOMER</string>
    <string name="user_selection">CHOOSE USER TYPE</string>
    <string name="no_vendors">No Vendors Registered</string>
    <string name="no_customers">No Customers Registered</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="add_new_vendor">Add New Vendor</string>
    <string name="pending_vendor_requests">Pending Vendor Requests</string>
    <string name="pending_customer_requests">Pending Customer Requests</string>
    <string name="submit_request">Submit</string>
    <string name="accept_request">Accept</string>
    <string name="deny_request">Deny</string>
    <string name="no_vendors_requests_pending">No Vendor Requests Pending</string>
    <string name="vendor_added_successfully">Vendor Added Successfully</string>
    <string name="error">Error Occurred</string>

    <!-- Vendor -->
    <string name="vendor_text">VENDOR</string>
</resources>